Fix block store block text visibility

--- a/packages/studio/pages/blocks/IndexPage/index.module.css
+++ b/packages/studio/pages/blocks/IndexPage/index.module.css
@@ -4,7 +4,7 @@
   flex-flow: row wrap;
   grid-auto-rows: 1fr;
   grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   justify-content: space-around;
   margin: 0 auto;
   max-width: 100%;
